[gd_scene load_steps=4 format=3 uid="uid://di1fvicjwhp2a"]

[ext_resource type="Script" uid="uid://ds40kewukeqgr" path="res://Scripts/pause.gd" id="1"]
[ext_resource type="FontFile" uid="uid://3088fs7yhrwi" path="res://Misc/comic sans.ttf" id="2"]


[sub_resource type="LabelSettings" id="LabelSettings_efjgu"]
font = ExtResource("2")
font_size = 32

[node name="Pause Screen" type="Panel"]
process_mode = 2
visible = false
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 159.0
offset_top = 22.0
offset_right = 297.0
offset_bottom = 100.0
text = "pause"
label_settings = SubResource("LabelSettings_efjgu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="resume" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 97.0
offset_right = 305.0
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 25
text = "resume"

[node name="reset" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 145.0
offset_right = 305.0
offset_bottom = 186.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 25
text = "reset"

[node name="exit_to_menu" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 191.0
offset_right = 305.0
offset_bottom = 232.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 25
text = "exit to menu"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 238.0
offset_right = 305.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 25
text = "exit"

[connection signal="pressed" from="resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="exit_to_menu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
